--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   font-family:'Poppins',sans-serif;
 }
 body{
-  min-height:100vh;
+  height:100vh;
   background:radial-gradient(circle at top,#2a0036,#050008);
   display:flex;
   justify-content:center;
@@ -24,7 +24,7 @@ body{
   overflow:hidden;
 }
 
-/* HEART BACKGROUND */
+/* HEARTS */
 .heart{
   position:absolute;
   font-size:16px;
@@ -32,18 +32,24 @@ body{
   animation:float 9s linear infinite;
 }
 @keyframes float{
-  0%{transform:translateY(110vh) scale(0.6);}
-  100%{transform:translateY(-10vh) scale(1.2);}
+  0%{transform:translateY(110vh);}
+  100%{transform:translateY(-10vh);}
 }
 
-/* ---------- FIRST PAGE ---------- */
-#question{
+/* COMMON PAGE */
+.page{
+  width:100%;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
   text-align:center;
   padding:20px;
 }
+
+/* PAGE 1 */
 #question h1{
-  font-size:2.2rem;
-  font-weight:900;
+  font-size:2rem;
   text-shadow:0 0 25px #ff4da6;
 }
 .buttons{
@@ -51,10 +57,9 @@ body{
   display:flex;
   gap:20px;
   justify-content:center;
-  position:relative;
 }
 button{
-  padding:15px 35px;
+  padding:14px 30px;
   font-size:1.1rem;
   border:none;
   border-radius:50px;
@@ -64,119 +69,92 @@ button{
 #yes{
   background:linear-gradient(45deg,#ff2f92,#a600ff);
   color:white;
-  box-shadow:0 0 20px #ff2f92;
 }
 #no{
-  background:#fff;
+  background:white;
   color:#ff2f92;
   position:relative;
-  transition:0.2s;
 }
 
-/* ---------- SECOND PAGE ---------- */
+/* PAGE 2 */
 #celebration{
   display:none;
-  width:100%;
-  min-height:100vh;
-  justify-content:center;
-  align-items:center;
-  padding:30px 20px;
 }
-
 .message-box{
   max-width:520px;
-  width:100%;
   background:rgba(0,0,0,0.6);
   border-radius:24px;
   padding:30px;
-  text-align:center;
-  box-shadow:0 0 40px rgba(255,0,140,0.4);
-  animation:fadeUp 1.2s ease forwards;
-}
-@keyframes fadeUp{
-  from{opacity:0; transform:translateY(40px);}
-  to{opacity:1; transform:translateY(0);}
 }
 .message-box h2{
-  font-family:'Pacifico',cursive;
-  font-size:1.9rem;
+  font-family:'Pacifico';
   color:#ff9ad5;
-  margin-bottom:15px;
 }
-.message-box p{
-  line-height:1.7;
-  color:#f2e9ff;
-}
-
-/* OPEN MEMORY */
 .open-box{
   margin-top:25px;
   padding:14px;
   border-radius:16px;
   background:linear-gradient(45deg,#ff2f92,#7b00ff);
-  font-weight:700;
   cursor:pointer;
-  box-shadow:0 0 20px rgba(255,47,146,0.6);
 }
 
-/* SLIDER */
+/* PAGE 3 */
+#gallery{
+  display:none;
+  flex-direction:column;
+}
 .slider{
-  margin:20px auto 0;
-  width:230px;
-  height:300px;
+  width:240px;
+  height:320px;
   border-radius:20px;
   overflow:hidden;
-  box-shadow:0 0 30px rgba(255,255,255,0.4);
-  display:none;
 }
 .slider img{
   width:100%;
   height:100%;
   object-fit:cover;
 }
-
-/* MOBILE */
-@media(max-width:480px){
-  #question h1{font-size:1.9rem;}
-  .message-box h2{font-size:1.6rem;}
-}
 </style>
 </head>
 
 <body>
 
-<!-- FIRST PAGE -->
-<div id="question">
-  <h1>AMBALIKA, WILL YOU BE MY VALENTINE? 💖</h1>
-  <div class="buttons">
-    <button id="yes">YES 💘</button>
-    <button id="no">NO 🙈</button>
+<!-- PAGE 1 -->
+<div class="page" id="question">
+  <div>
+    <h1>AMBALIKA, WILL YOU BE MY VALENTINE? 💖</h1>
+    <div class="buttons">
+      <button id="yes">YES 💘</button>
+      <button id="no">NO 🙈</button>
+    </div>
   </div>
 </div>
 
-<!-- SECOND PAGE -->
-<div id="celebration">
+<!-- PAGE 2 -->
+<div class="page" id="celebration">
   <div class="message-box">
-    <h2>Happy Valentine Week 💖</h2>
+    <h2>Happy Valentine 💖</h2>
     <p>
       Tu sirf dost nahi,<br>
-      meri aadat aur sukoon hai 🌙<br><br>
+      meri aadat aur sukoon hai 🤍<br><br>
 
-      Andheri raaton me jo roshni bane,<br>
-      wo pyari si wajah tu hai ✨<br><br>
+      Tu sirf dost nahi<br>
+      Meri aadat aur sukoon hai<br>
+      Andheri raaton me jo roshni bane<br>
+      Wo pyari si wajah tu hi hai<br><br>
 
-      Valentine shayad pyaar ke liye hota ho ❤️<br>
-      par meri har khushi ka reason<br>
-      bas tu hi rahe 🤍
+      Valentine shayad pyaar ke liye hota hoga<br>
+      Par meri har khushi ka reason bas tum hi rahe<br>
+      Dostu
     </p>
+    <div class="open-box" id="openBox">Open Memories 💕</div>
+  </div>
+</div>
 
-    <div class="open-box" id="openBox">
-      Open Memories 💕
-    </div>
-
-    <div class="slider" id="slider">
-      <img id="slide" src="1.jpg">
-    </div>
+<!-- PAGE 3 -->
+<div class="page" id="gallery">
+  <div class="slider">
+    <img id="slide" src="1.jpg">
   </div>
 </div>
 
@@ -184,7 +162,7 @@ button{
 
 <script>
 /* HEARTS */
-const hearts=["❤️","💖","💘","💕"];
+const hearts=["❤️","💖","💘"];
 setInterval(()=>{
   const h=document.createElement("div");
   h.className="heart";
@@ -194,41 +172,38 @@ setInterval(()=>{
   setTimeout(()=>h.remove(),9000);
 },900);
 
-/* NO BUTTON PLAYFUL */
+/* NO BUTTON MOVE */
 const no=document.getElementById("no");
 function moveNo(){
-  no.style.position="absolute";
-  no.style.left=Math.random()*(window.innerWidth-120)+"px";
-  no.style.top=Math.random()*(windo
-
-w.innerHeight-80)+"px";
+  const x=Math.random()*120-60;
+  const y=Math.random()*60-30;
+  no.style.transform=`translate(${x}px,${y}px)`;
 }
 no.addEventListener("mouseenter",moveNo);
-no.addEventListener("click",moveNo);
 no.addEventListener("touchstart",moveNo);
 
-/* YES CLICK – PAGE SWITCH */
-document.getElementById("yes").onclick=()=>{
-  document.getElementById("question").style.display="none";
-  document.getElementById("celebration").style.display="flex";
-  music.currentTime=0;
+/* YES → PAGE 2 */
+yes.onclick=()=>{
+  question.style.display="none";
+  celebration.style.display="flex";
   music.play();
 };
 
-/* OPEN MEMORY – PHOTO ONE BY ONE */
-let index=1, started=false;
-document.getElementById("openBox").onclick=()=>{
-  const slider=document.getElementById("slider");
-  slider.style.display="block";
+/* OPEN → PAGE 3 (FIXED SLIDESHOW) */
+let i=1;
+let timer;
+openBox.onclick=()=>{
+  celebration.style.display="none";
+  gallery.style.display="flex";
 
-  if(!started){
-    started=true;
-    setInterval(()=>{
-      index++;
-      if(index>10) index=1;
-      document.getElementById("slide").src=index+".jpg";
-    },2000);
-  }
+  slide.src = "1.jpg";   // ✅ FIX: first photo immediately
+
+  clearInterval(timer);
+  timer = setInterval(()=>{
+    i++;
+    if(i>10) i=1;
+    slide.src = i + ".jpg";
+  },2000);
 };
 </script>
 
